<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Inventory</string>

    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title text for the empty view, which describes the empty inventory image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">Inventory is empty&#8230;</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a Product</string>

    <!-- Title for the activity to edit a product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new product has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_successful">Product saved</string>

    <!-- Toast message in editor when new product has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_product_failed">Error with saving product</string>

    <!-- Toast message in editor when current product was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_successful">Product updated</string>

    <!-- Toast message in editor when current product has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_product_failed">Error with updating product</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for name information in the editor [CHAR LIMIT=30] -->
    <string name="category_name">Name</string>

    <!-- Label for quantity information in the editor [CHAR LIMIT=30] -->
    <string name="category_quantity">Quantity</string>

    <!-- Label for price information in the editor [CHAR LIMIT=30] -->
    <string name="category_price">Price</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_name">Name</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_quantity">Quantity</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_product_price">Price</string>

    <!-- Exception for invalid product name [CHAR LIMIT=30] -->
    <string name="invalid_product_name_exception">Product requires a name</string>

    <!-- Exception for invalid product quantity [CHAR LIMIT=30] -->
    <string name="invalid_product_quantity_exception">Product requires valid quantity</string>

    <!-- Exception for invalid product price [CHAR LIMIT=30] -->
    <string name="invalid_product_price_exception">Product requires valid price</string>

    <!-- Label for sale button [CHAR LIMIT=20] -->
    <string name="sale">Sale</string>

    <!-- Label for In stock information [CHAR LIMIT=30] -->
    <string name="in_stock">In stock (%1$s)</string>

    <!-- Label for Out of stock information [CHAR LIMIT=30] -->
    <string name="out_of_stock">Out of stock</string>

    <!-- Laber for Order More button in the editor [CHAR LIMIT=30] -->
    <string name="order_more">Order More</string>

    <!-- Supplier's e-mail [CHAR LIMIT=30] -->
    <string name="supplier_email">supplier@example.com</string>

    <!-- Subject e-mail [CHAR LIMIT=20] -->
    <string name="subject_email">Order</string>

    <!-- Body e-mail [CHAR LIMIT=100] -->
    <string name="body_email">Order Detail:\nProduct name: %1$s\nQuantity: TBD</string>

    <!-- Label for Select Picture button [CHAR LIMIT=30] -->
    <string name="select_picture">Select Picture</string>

    <!-- Label for Take Picture button [CHAR LIMIT=30] -->
    <string name="take_picture">Take Picture</string>
    <string name="product_image">Product image</string>

</resources>
